improve-backend-service

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,15 @@
 DWANI_API_BASE_URL_TTS=http://host.docker.internal:10804
 DWANI_API_BASE_URL_ASR=http://host.docker.internal:10803
 DWANI_API_BASE_URL_LLM=http://host.docker.internal:10802
-# Optional; default is gemma3
+# Optional
 DWANI_LLM_MODEL=gemma3
+# For English/German transcription (default: http://localhost:8000)
+# DWANI_API_BASE_URL_TRANSCRIPTION=http://localhost:8000
+# Timeouts in seconds (default: 30, 30, 60)
+# DWANI_ASR_TIMEOUT=30
+# DWANI_TTS_TIMEOUT=30
+# DWANI_LLM_TIMEOUT=60
+# Max upload size in bytes (default: 25MB)
+# DWANI_MAX_UPLOAD_BYTES=26214400
+# Retries for ASR/TTS (default: 2)
+# DWANI_MAX_RETRIES=2
