--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ DWANI_LLM_MODEL=gemma3
 # DWANI_MAX_UPLOAD_BYTES=26214400
 # Retries for ASR/TTS (default: 2)
 # DWANI_MAX_RETRIES=2
+# Session context: max messages to send to LLM (default: 10 = 5 turns)
+# DWANI_SESSION_CONTEXT_LIMIT=10
+# Max messages to store per session (default: 20)
+# DWANI_SESSION_MAX_HISTORY=20
