--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
           pip install pytest
 
       - name: Run tests
-        run: pytest -q
+        run: PYTHONPATH=. pytest -q
 
   frontend:
     name: Frontend - Vite build
@@ -62,7 +62,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build backend image
-        run: docker build -t talk-backend .
+        run: docker build -t talk-backend ./talk-server
 
       - name: Build frontend image
         run: docker build -t talk-frontend ./talk-ui
