--- a/compose-integrated.yml
+++ b/compose-integrated.yml
@@ -8,6 +8,7 @@ services:
     depends_on:
       - tts-indic-server
       - vllm-server
+      - asr-indic-server
     healthcheck:
       test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')"]
       interval: 10s
@@ -16,7 +17,7 @@ services:
       start_period: 5s
     environment:
       DWANI_API_BASE_URL_TTS: http://tts-indic-server:10804
-      DWANI_API_BASE_URL_ASR: ${DWANI_API_BASE_URL_ASR:-http://host.docker.internal:10803}
+      DWANI_API_BASE_URL_ASR: http://asr-indic-server:10803
       DWANI_API_BASE_URL_LLM: http://vllm-server:10802
       DWANI_LLM_MODEL: ${DWANI_LLM_MODEL:-gemma3}
     extra_hosts:
@@ -30,12 +31,32 @@ services:
     depends_on:
       - talk
     restart: unless-stopped
+  asr-indic-server:
+    image: dwani/asr-indic-server:latest
+    volumes:
+      - ~/.cache/huggingface:/root/.cache/huggingface
+    ports:
+      - 10803:10803
+    environment:
+      - HF_TOKEN
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    restart: unless-stopped
+    deploy:
+          resources:
+            reservations:
+              devices:
+                - driver: nvidia
+                  device_ids: ['0']
+                  capabilities: [gpu]
   tts-indic-server:
     image: dwani/tts-indic-server:latest
     volumes:
       - ~/.cache/huggingface:/root/.cache/huggingface
     ports:
       - "10804:10804"
+    environment:
+      - HF_TOKEN
     extra_hosts:
       - "host.docker.internal:host-gateway"
     restart: unless-stopped
