--- a/talk-ui/nginx.conf
+++ b/talk-ui/nginx.conf
@@ -36,6 +36,17 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Proxy vLLM (OpenAI-compatible) chat completions via port 80
+    # External clients can use: http://host/llm/v1/chat/completions
+    location /llm/ {
+        proxy_pass http://vllm-server:10802/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     location /v1/ {
         proxy_pass http://talk:8000;
         proxy_http_version 1.1;
