--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -17,6 +17,8 @@ services:
       DWANI_API_BASE_URL_ASR: ${DWANI_API_BASE_URL_ASR:-http://host.docker.internal:10803}
       DWANI_API_BASE_URL_LLM: ${DWANI_API_BASE_URL_LLM:-http://host.docker.internal:10802}
       DWANI_LLM_MODEL: ${DWANI_LLM_MODEL:-gemma3}
+      # If set, public endpoints require X-API-Key. Leave empty to disable auth in dev.
+      DWANI_API_KEYS: ${DWANI_API_KEYS:-}
     extra_hosts:
       - "host.docker.internal:host-gateway"
     restart: unless-stopped
@@ -27,4 +29,8 @@ services:
       - "80:80"
     depends_on:
       - talk
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+      # Alias vllm-server to host for nginx /llm proxy in dev
+      - "vllm-server:host-gateway"
     restart: unless-stopped
