--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -17,7 +17,6 @@ services:
       DWANI_API_BASE_URL_ASR: ${DWANI_API_BASE_URL_ASR:-http://host.docker.internal:10803}
       DWANI_API_BASE_URL_LLM: ${DWANI_API_BASE_URL_LLM:-http://host.docker.internal:10802}
       DWANI_LLM_MODEL: ${DWANI_LLM_MODEL:-gemma3}
-      # If set, public endpoints require X-API-Key. Leave empty to disable auth in dev.
       DWANI_API_KEYS: ${DWANI_API_KEYS:-}
     extra_hosts:
       - "host.docker.internal:host-gateway"
@@ -30,7 +29,6 @@ services:
     depends_on:
       - talk
     extra_hosts:
-      - "host.docker.internal:host-gateway"
-      # Alias vllm-server to host for nginx /llm proxy in dev
+      - "host.docker.internal:host-gateway"      # Alias vllm-server to host for nginx /llm proxy in dev
       - "vllm-server:host-gateway"
     restart: unless-stopped
