--- a/compose-integrated.yml
+++ b/compose-integrated.yml
@@ -16,7 +16,7 @@ services:
       start_period: 5s
     environment:
       DWANI_API_BASE_URL_TTS: http://tts-indic-server:10804
-      DWANI_API_BASE_URL_ASR: ${DWANI_API_BASE_URL_ASR:-http://host.docker.internal:10803}
+      DWANI_API_BASE_URL_ASR: http://asr-indic-server:10803
       DWANI_API_BASE_URL_LLM: http://vllm-server:10802
       DWANI_LLM_MODEL: ${DWANI_LLM_MODEL:-gemma3}
     extra_hosts:
@@ -30,6 +30,24 @@ services:
     depends_on:
       - talk
     restart: unless-stopped
+  asr-indic-server:
+    image: dwani/asr-indic-server:latest
+    volumes:
+      - ~/.cache/huggingface:/root/.cache/huggingface
+    ports:
+      - 10803:10803
+    environment:
+      - HF_TOKEN
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    restart: unless-stopped
+    deploy:
+          resources:
+            reservations:
+              devices:
+                - driver: nvidia
+                  device_ids: ['0']
+                  capabilities: [gpu]
   tts-indic-server:
     image: dwani/tts-indic-server:latest
     volumes:
