--- a/compose-integrated.yml
+++ b/compose-integrated.yml
@@ -94,9 +94,7 @@ services:
       - "10802:10802"
 
   agents:
-    build:
-      context: ./agents
-      dockerfile: Dockerfile
+    image: dwani/talk-agents:latest
     expose:
       - "8081"
     depends_on:
