--- a/compose.yml
+++ b/compose.yml
@@ -17,6 +17,7 @@ services:
       DWANI_API_BASE_URL_ASR: ${DWANI_API_BASE_URL_ASR:-http://host.docker.internal:10803}
       DWANI_API_BASE_URL_LLM: ${DWANI_API_BASE_URL_LLM:-http://host.docker.internal:10802}
       DWANI_LLM_MODEL: ${DWANI_LLM_MODEL:-gemma3}
+      DWANI_AGENT_BASE_URL: ${DWANI_AGENT_BASE_URL:-http://agents:8081}
     extra_hosts:
       - "host.docker.internal:host-gateway"
     restart: unless-stopped
@@ -27,4 +28,16 @@ services:
       - "80:80"
     depends_on:
       - talk
+    restart: unless-stopped
+
+  agents:
+    build: ./agents
+    expose:
+      - "8081"
+    environment:
+      LITELLM_MODEL_NAME: ${LITELLM_MODEL_NAME:-openai/gemma3}
+      LITELLM_API_BASE: ${LITELLM_API_BASE:-https://qwen/v1}
+      LITELLM_API_KEY: ${LITELLM_API_KEY}
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     restart: unless-stopped
