--- a/talk-ui/package.json
+++ b/talk-ui/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "@react-three/fiber": "^8.17.3",
+    "@react-three/drei": "^9.109.4",
+    "three": "^0.160.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
