full-fledged-refactor

--- a/talk-server/Dockerfile
+++ b/talk-server/Dockerfile
@@ -5,7 +5,9 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY main.py .
+COPY main.py config.py models.py deps.py .
+COPY routers/ routers/
+COPY services/ services/
 
 EXPOSE 8000
 
