--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,10 @@ jobs:
     name: Backend - pytest
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: talk-server
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -27,7 +31,7 @@ jobs:
           pip install pytest
 
       - name: Run tests
-        run: PYTHONPATH=. pytest -q
+        run: pytest -q --cov=. --cov-report=term-missing
 
   frontend:
     name: Frontend - Vite build
@@ -49,6 +53,12 @@ jobs:
       - name: Install dependencies
         run: |
           npm ci || npm install
+
+      - name: Lint
+        run: npm run lint
+
+      - name: Test
+        run: npm run test
 
       - name: Build
         run: npm run build
