--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -3,6 +3,7 @@
 # UI at http://localhost:80 — proxies /v1 to backend
 services:
   talk:
+    image: dwani/talk-server:latest
     build: ./talk-server
     expose:
       - "8000"
@@ -23,6 +24,7 @@ services:
     restart: unless-stopped
 
   talk-ui:
+    image: dwani/talk-ux:latest
     build: ./talk-ui
     ports:
       - "80:80"
@@ -31,6 +33,7 @@ services:
     restart: unless-stopped
 
   agents:
+    image: dwani/agents:latest
     build: ./agents
     expose:
       - "8081"
