--- a/talk-server/requirements.txt
+++ b/talk-server/requirements.txt
@@ -22,6 +22,7 @@ pydantic==2.12.5
 pydantic_core==2.41.5
 Pygments==2.19.2
 pytest==9.0.2
+pytest-cov==6.0.0
 python-multipart==0.0.22
 requests==2.32.5
 slowapi==0.1.9
