--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,27 @@ DWANI_API_BASE_URL_ASR=http://host.docker.internal:10803
 DWANI_API_BASE_URL_LLM=http://host.docker.internal:10802
 # Optional
 DWANI_LLM_MODEL=gemma3
+# Optional API auth key for talk-server endpoints
+# DWANI_API_KEY=change-me
+# Optional API key used to call LLM-compatible endpoint
+# DWANI_LLM_API_KEY=sk-dummy
+# Optional Redis URL for persistent sessions
+# DWANI_REDIS_URL=redis://redis:6379/0
+# Session TTL in seconds when Redis is enabled (default: 86400)
+# DWANI_SESSION_TTL_SECONDS=86400
+# Optional API key for agents service
+# AGENTS_API_KEY=change-me
+# Optional comma-separated CORS origins for agents service
+# AGENTS_ALLOWED_ORIGINS=https://talk.dwani.ai,http://localhost:5173
+# Optional Redis URL for agents session history persistence
+# AGENTS_REDIS_URL=redis://redis:6379/1
+# Metrics/tracing toggles
+# DWANI_ENABLE_METRICS=1
+# DWANI_ENABLE_TRACING=0
+# Enforce required upstream env var validation on startup
+# DWANI_ENFORCE_ENV=1
+# AGENTS_ENABLE_METRICS=1
+# AGENTS_ENABLE_TRACING=0
 # For English/German transcription (default: http://localhost:8000)
 # DWANI_API_BASE_URL_TRANSCRIPTION=http://localhost:8000
 # Timeouts in seconds (default: 30, 30, 60)
