--- a/agents/requirements.txt
+++ b/agents/requirements.txt
@@ -154,3 +154,6 @@ xxhash==3.6.0
 yarl==1.22.0
 zipp==3.23.0
 zstandard==0.25.0
+prometheus-fastapi-instrumentator
+opentelemetry-instrumentation-fastapi
+redis
