--- a/compose-integrated-qwen.yml
+++ b/compose-integrated-qwen.yml
@@ -2,12 +2,18 @@
 # Copy .env.example to .env. UI at http://localhost:80 — proxies /v1 to backend.
 services:
   talk:
-    image: dwani/talk-server:latest
+    image: dwani/talk-server:${DWANI_TALK_SERVER_TAG:-latest}
     expose:
       - "8000"
     depends_on:
-      - tts-indic-server
-      - vllm-server
+      tts-indic-server:
+        condition: service_started
+      vllm-server:
+        condition: service_started
+      agents:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')"]
       interval: 10s
@@ -20,17 +26,32 @@ services:
       DWANI_API_BASE_URL_LLM: http://vllm-server:10802
       DWANI_LLM_MODEL: ${DWANI_LLM_MODEL:-gemma3}
       DWANI_AGENT_BASE_URL: http://agents:8081
+      DWANI_REDIS_URL: ${DWANI_REDIS_URL:-redis://redis:6379/0}
+      DWANI_API_KEY: ${DWANI_API_KEY:-}
+      DWANI_LLM_API_KEY: ${DWANI_LLM_API_KEY:-dummy}
+      AGENTS_API_KEY: ${AGENTS_API_KEY:-}
     extra_hosts:
       - "host.docker.internal:host-gateway"
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: "2.0"
+          memory: 2G
 
   talk-ui:
-    image: dwani/talk-ux:latest
+    image: dwani/talk-ux:${DWANI_TALK_UI_TAG:-latest}
     ports:
       - "80:80"
     depends_on:
-      - talk
+      talk:
+        condition: service_healthy
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: "1.0"
+          memory: 512M
   asr-indic-server:
     image: dwani/asr-indic-server:latest
     volumes:
@@ -96,7 +117,7 @@ services:
       - "10802:10802"
 
   agents:
-    image: dwani/talk-agents:latest
+    image: dwani/talk-agents:${DWANI_TALK_AGENTS_TAG:-latest}
     expose:
       - "8081"
     depends_on:
@@ -105,8 +126,33 @@ services:
       LITELLM_MODEL_NAME: ${LITELLM_MODEL_NAME:-openai/gemma3}
       LITELLM_API_BASE: http://vllm-server:10802/v1
       LITELLM_API_KEY: ${LITELLM_API_KEY}
+      AGENTS_API_KEY: ${AGENTS_API_KEY:-}
+      AGENTS_ALLOWED_ORIGINS: ${AGENTS_ALLOWED_ORIGINS:-http://localhost}
+      AGENTS_REDIS_URL: ${AGENTS_REDIS_URL:-redis://redis:6379/1}
     volumes:
       - fix_my_city_data:/app/fix-my-city/data
+    healthcheck:
+      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8081/healthz')"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 5s
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: "2.0"
+          memory: 2G
+
+  redis:
+    image: redis:7-alpine
+    expose:
+      - "6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
     restart: unless-stopped
 
 volumes:
