--- a/talk-server/Dockerfile
+++ b/talk-server/Dockerfile
@@ -11,4 +11,4 @@ COPY services/ services/
 
 EXPOSE 8000
 
-CMD ["python", "main.py", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["gunicorn", "-k", "uvicorn.workers.UvicornWorker", "-w", "2", "-b", "0.0.0.0:8000", "main:app", "--access-logfile", "-", "--error-logfile", "-"]
