--- a/talk-server/requirements.txt
+++ b/talk-server/requirements.txt
@@ -35,3 +35,11 @@ typing_extensions==4.15.0
 urllib3==2.6.3
 uvicorn==0.41.0
 wrapt==2.1.1
+gunicorn
+redis
+python-json-logger
+prometheus-fastapi-instrumentator
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-instrumentation-fastapi
+opentelemetry-exporter-otlp
