--- a/compose-integrated-qwen.yml
+++ b/compose-integrated-qwen.yml
@@ -14,6 +14,8 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+      postgres:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')"]
       interval: 10s
@@ -27,7 +29,12 @@ services:
       DWANI_LLM_MODEL: ${DWANI_LLM_MODEL:-gemma3}
       DWANI_AGENT_BASE_URL: http://agents:8081
       DWANI_REDIS_URL: ${DWANI_REDIS_URL:-redis://redis:6379/0}
+      DWANI_DATABASE_URL: ${DWANI_DATABASE_URL:-postgresql+psycopg://talk:talk@postgres:5432/talk}
       DWANI_API_KEY: ${DWANI_API_KEY:-}
+      DWANI_AUTH_COOKIE_NAME: ${DWANI_AUTH_COOKIE_NAME:-dwani_auth_session}
+      DWANI_AUTH_SESSION_TTL_SECONDS: ${DWANI_AUTH_SESSION_TTL_SECONDS:-86400}
+      DWANI_AUTH_COOKIE_SAMESITE: ${DWANI_AUTH_COOKIE_SAMESITE:-lax}
+      DWANI_AUTH_COOKIE_SECURE: ${DWANI_AUTH_COOKIE_SECURE:-0}
       DWANI_LLM_API_KEY: ${DWANI_LLM_API_KEY:-dummy}
       AGENTS_API_KEY: ${AGENTS_API_KEY:-}
     extra_hosts:
@@ -155,5 +162,23 @@ services:
       retries: 3
     restart: unless-stopped
 
+  postgres:
+    image: postgres:16-alpine
+    environment:
+      POSTGRES_USER: ${DWANI_POSTGRES_USER:-talk}
+      POSTGRES_PASSWORD: ${DWANI_POSTGRES_PASSWORD:-talk}
+      POSTGRES_DB: ${DWANI_POSTGRES_DB:-talk}
+    expose:
+      - "5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DWANI_POSTGRES_USER:-talk} -d ${DWANI_POSTGRES_DB:-talk}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    volumes:
+      - talk_postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
+
 volumes:
   fix_my_city_data:
+  talk_postgres_data:
