--- a/talk-server/Dockerfile
+++ b/talk-server/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY main.py config.py models.py deps.py .
+COPY main.py config.py models.py deps.py auth_models.py auth_store.py .
 COPY routers/ routers/
 COPY services/ services/
 
