--- a/compose-integrated.yml
+++ b/compose-integrated.yml
@@ -8,6 +8,7 @@ services:
     depends_on:
       - tts-indic-server
       - vllm-server
+      - postgres
     healthcheck:
       test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')"]
       interval: 10s
@@ -20,6 +21,11 @@ services:
       DWANI_API_BASE_URL_LLM: http://vllm-server:10802
       DWANI_LLM_MODEL: ${DWANI_LLM_MODEL:-gemma3}
       DWANI_AGENT_BASE_URL: http://agents:8081
+      DWANI_DATABASE_URL: ${DWANI_DATABASE_URL:-postgresql+psycopg://talk:talk@postgres:5432/talk}
+      DWANI_AUTH_COOKIE_NAME: ${DWANI_AUTH_COOKIE_NAME:-dwani_auth_session}
+      DWANI_AUTH_SESSION_TTL_SECONDS: ${DWANI_AUTH_SESSION_TTL_SECONDS:-86400}
+      DWANI_AUTH_COOKIE_SAMESITE: ${DWANI_AUTH_COOKIE_SAMESITE:-lax}
+      DWANI_AUTH_COOKIE_SECURE: ${DWANI_AUTH_COOKIE_SECURE:-0}
     extra_hosts:
       - "host.docker.internal:host-gateway"
     restart: unless-stopped
@@ -107,5 +113,23 @@ services:
       - fix_my_city_data:/app/fix-my-city/data
     restart: unless-stopped
 
+  postgres:
+    image: postgres:16-alpine
+    environment:
+      POSTGRES_USER: ${DWANI_POSTGRES_USER:-talk}
+      POSTGRES_PASSWORD: ${DWANI_POSTGRES_PASSWORD:-talk}
+      POSTGRES_DB: ${DWANI_POSTGRES_DB:-talk}
+    expose:
+      - "5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DWANI_POSTGRES_USER:-talk} -d ${DWANI_POSTGRES_DB:-talk}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    volumes:
+      - talk_postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
+
 volumes:
   fix_my_city_data:
+  talk_postgres_data:
