--- a/talk-server/requirements.txt
+++ b/talk-server/requirements.txt
@@ -34,12 +34,15 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.6.3
 uvicorn==0.41.0
-wrapt==2.1.1
+wrapt==1.17.3
 gunicorn
 redis
 python-json-logger
 prometheus-fastapi-instrumentator
-opentelemetry-api
-opentelemetry-sdk
-opentelemetry-instrumentation-fastapi
-opentelemetry-exporter-otlp
+opentelemetry-api==1.34.1
+opentelemetry-sdk==1.34.1
+opentelemetry-instrumentation-fastapi==0.55b1
+opentelemetry-exporter-otlp==1.34.1
+sqlalchemy
+passlib[bcrypt]
+psycopg[binary]
