--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,10 @@ jobs:
     name: Backend - pytest
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: talk-server
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -27,7 +31,7 @@ jobs:
           pip install pytest
 
       - name: Run tests
-        run: PYTHONPATH=. pytest -q
+        run: pytest -q --cov=. --cov-report=term-missing --cov-fail-under=20
 
   frontend:
     name: Frontend - Vite build
@@ -47,8 +51,13 @@ jobs:
           node-version: "20.x"
 
       - name: Install dependencies
-        run: |
-          npm ci || npm install
+        run: npm ci
+
+      - name: Lint
+        run: npm run lint
+
+      - name: Test
+        run: npm run test
 
       - name: Build
         run: npm run build
@@ -66,4 +75,74 @@ jobs:
 
       - name: Build frontend image
         run: docker build -t talk-frontend ./talk-ui
+
+      - name: Build agents image
+        run: docker build -t talk-agents ./agents
+
+  agents:
+    name: Agents - pytest
+    runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: agents
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest
+
+      - name: Run tests
+        run: pytest -q tests
+
+  smoke:
+    name: Compose smoke test
+    runs-on: ubuntu-latest
+    needs: [backend, frontend, docker]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Start compose stack
+        run: docker compose -f compose-dev.yml up -d --build talk talk-ui agents redis
+
+      - name: Wait for talk health
+        run: |
+          for i in {1..30}; do
+            code=$(curl -s -o /dev/null -w "%{http_code}" http://localhost/health || true)
+            if [ "$code" = "200" ]; then
+              exit 0
+            fi
+            sleep 2
+          done
+          echo "talk service did not become healthy in time"
+          docker compose -f compose-dev.yml logs talk
+          exit 1
+
+      - name: Validate API route wiring
+        run: |
+          code=$(curl -s -o /dev/null -w "%{http_code}" -X POST "http://localhost/v1/chat" \
+            -H "Content-Type: application/json" \
+            -d '{"text":"smoke test","mode":"llm"}' || true)
+          if [ "$code" = "200" ] || [ "$code" = "502" ]; then
+            exit 0
+          fi
+          echo "unexpected status: $code"
+          docker compose -f compose-dev.yml logs talk
+          exit 1
+
+      - name: Teardown
+        if: always()
+        run: docker compose -f compose-dev.yml down -v
 
