--- a/talk-server/Dockerfile
+++ b/talk-server/Dockerfile
@@ -5,8 +5,10 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY main.py .
+COPY main.py config.py models.py deps.py auth_models.py auth_store.py .
+COPY routers/ routers/
+COPY services/ services/
 
 EXPOSE 8000
 
-CMD ["python", "main.py", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["gunicorn", "-k", "uvicorn.workers.UvicornWorker", "-w", "2", "-b", "0.0.0.0:8000", "main:app", "--access-logfile", "-", "--error-logfile", "-"]
