--- a/talk-server/requirements.txt
+++ b/talk-server/requirements.txt
@@ -22,6 +22,7 @@ pydantic==2.12.5
 pydantic_core==2.41.5
 Pygments==2.19.2
 pytest==9.0.2
+pytest-cov==6.0.0
 python-multipart==0.0.22
 requests==2.32.5
 slowapi==0.1.9
@@ -33,4 +34,15 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.6.3
 uvicorn==0.41.0
-wrapt==2.1.1
+wrapt==1.17.3
+gunicorn
+redis
+python-json-logger
+prometheus-fastapi-instrumentator
+opentelemetry-api==1.34.1
+opentelemetry-sdk==1.34.1
+opentelemetry-instrumentation-fastapi==0.55b1
+opentelemetry-exporter-otlp==1.34.1
+sqlalchemy
+passlib[bcrypt]
+psycopg[binary]
