--- a/compose-integrated.yml
+++ b/compose-integrated.yml
@@ -64,6 +64,8 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
     restart: unless-stopped
+    environment:
+      TTS_NFE_STEPS: 8
     deploy:
       resources:
         reservations:
